# multi-send

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.mocha.json
programs/multi-send/: Cargo.toml
programs/multi-send/src/: lib.rs
tests/: multi-send.spec.ts  multi-send.ts  util.ts
