[package]
name = "multi-send"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_send"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.13"

[dev-dependencies]
solana-sdk = "~1.9.15"
solana-cli-config = "1.9.5"
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
